--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-css": "tailwind build src/styles/tailwind.css -o public/styles.css"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.3",
@@ -21,19 +23,29 @@
     "framer-motion": "^6.5.1",
     "lodash": "^4.17.21",
     "next": "13.0.2",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.4",
     "next-videos": "1.5.0",
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
+    "react-particle-backgrounds": "^1.0.4",
     "react-redux": "^8.0.5",
     "react-redux-loading-bar": "^5.0.4",
+    "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
+    "react-tsparticles": "^2.9.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "^3.2.1",
+    "tsparticles": "^2.9.3",
+    "tsparticles-slim": "^2.9.3",
+    "url-loader": "^4.1.1",
     "use-debounce": "^9.0.3"
   },
   "devDependencies": {
