--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "next": "13.0.2",
     "next-compose-plugins": "^2.2.1",
@@ -38,7 +39,7 @@
     "react-redux": "^8.0.5",
     "react-redux-loading-bar": "^5.0.4",
     "react-router-dom": "^6.9.0",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^9.1.2",
     "react-tsparticles": "^2.9.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
