--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "13.0.2",
     "next-compose-plugins": "^2.2.1",
