--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.12",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
+    "eventsource": "^2.0.2",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.1",
@@ -28,6 +29,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "next-videos": "1.5.0",
+    "ol": "^7.3.0",
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
