--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ol": "^7.3.0",
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^16.8.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
