--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "eventsource": "^2.0.2",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
+    "google-map-react": "^2.2.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.14.1",
     "next": "13.0.2",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
@@ -34,6 +36,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
