--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^6.5.1",
     "google-map-react": "^2.2.0",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.14.1",
