--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "next-videos": "1.5.0",
-    "ol": "^7.3.0",
+    
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
+    "react-mapbox-gl": "^5.1.1",
     "react-multi-carousel": "^2.8.2",
     "react-particle-backgrounds": "^1.0.4",
     "react-redux": "^8.0.5",
