--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ol": "^7.3.0",
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
@@ -49,6 +49,7 @@
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
     "react-tsparticles": "^2.9.3",
+    "reconnecting-websocket": "^4.4.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "^3.2.1",
