--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@coreui/icons": "^3.0.1",
-    "@headlessui/react": "^1.7.2",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.3",
     "apexcharts": "^3.36.3",
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
@@ -49,6 +50,7 @@
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
     "react-tsparticles": "^2.9.3",
+    "recharts": "^2.6.2",
     "reconnecting-websocket": "^4.4.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
