--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.23",
     "react-mapbox-gl": "^5.1.1",
     "react-multi-carousel": "^2.8.2",
     "react-particle-backgrounds": "^1.0.4",
