camera live and recorder

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "react-time-picker": "^6.5.0",
     "mapbox-gl": "^2.14.1",
     "next": "13.0.2",
     "next-compose-plugins": "^2.2.1",
