--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react-time-picker": "^6.5.0",
+    "react-grid-heatmap":"1.3.0",
     "mapbox-gl": "^2.14.1",
     "next": "13.0.2",
     "next-compose-plugins": "^2.2.1",
