--- a/package.json
+++ b/package.json
@@ -27,22 +27,21 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "react-time-picker": "^6.5.0",
-    "react-grid-heatmap":"1.3.0",
     "mapbox-gl": "^2.14.1",
-    "next": "13.0.2",
+    "next": "^13.4.19",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.4",
     "next-videos": "1.5.0",
     "ol": "^7.3.0",
     "postcss-focus-visible": "^6.0.4",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-grid-heatmap": "1.3.0",
     "react-icons": "^4.10.1",
     "react-map-gl": "^7.0.23",
     "react-mapbox-gl": "^5.1.1",
@@ -51,6 +50,7 @@
     "react-redux": "^8.0.5",
     "react-redux-loading-bar": "^5.0.4",
     "react-router-dom": "^6.9.0",
+    "react-time-picker": "^6.5.0",
     "react-toastify": "^9.1.2",
     "react-tsparticles": "^2.9.3",
     "recharts": "^2.6.2",
