--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-particle-backgrounds": "^1.0.4",
     "react-redux": "^8.0.5",
     "react-redux-loading-bar": "^5.0.4",
+    "react-region-select": "^2.3.0",
     "react-router-dom": "^6.9.0",
     "react-time-picker": "^6.5.0",
     "react-toastify": "^9.1.2",
